added gitignore file and readme file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Grid Template</title>
 </head>
 <body>
-        <div class="cover">
+    <div class="cover">
     <nav class="navbar">
         <ul class="tabs">
             <li>Home</li>
@@ -33,7 +33,7 @@
         <div class="cards">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/2000px-React-icon.svg.png" alt="">
             <div>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur, magni. Consectetur, saepe ipsa. Sequi doloremque, soluta obcaecati vero repudiandae, optio dolorem, officia reiciendis alias at dignissimos neque veniam nesciunt aut?</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. onsequatur, magni. Consectetur, saepe ipsa. Sequi doloremque, soluta obcaecati vero repudiandae, optio dolorem, officia reiciendis alias at dignissimos neque veniam nesciunt aut?</p>
             </div>
         </div>
         <div class="cards">
